# rag-knowledge-base

./: .gitignore  README.md  debug_conv_kb.py  debug_full.py  python_basics.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260624_0001_init.py
backend/app/: __init__.py  main.py  utils.py
backend/app/api/v1/: router.py
backend/app/core/: auth.py  config.py  deps.py  logging.py  security.py  storage.py  task_queue.py
backend/app/db/: session.py
backend/app/middleware/: logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  common.py  conversation.py  document.py  knowledge_base.py  user.py
backend/app/routers/: auth.py  conversations.py  documents.py  health.py  knowledge_bases.py  search.py
backend/app/schemas/: auth.py  common.py  conversation.py  document.py  knowledge_base.py  search.py
backend/app/scripts/: bootstrap.py  init_db.py  verify_dashscope.py
backend/app/services/: auth_service.py  conversation_service.py  document_service.py  knowledge_base_service.py
backend/app/services/embeddings/: base.py  dashscope_provider.py  mock_provider.py  router.py
backend/app/services/fulltext/: base.py  opensearch_searcher.py  postgresql_searcher.py  router.py
backend/app/services/ingestion/: pipeline.py  tasks.py
backend/app/services/llm/: base.py  openai_client.py  router.py
backend/app/services/rag/: orchestrator.py
backend/app/workers/: ingestion_worker.py
backend/tests/: conftest.py
docs/: 使用说明.md  简历项目描述.md  (+1 more)
(+33 files in other folders)
