[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-kb-backend"
version = "0.1.0"
description = "Production-grade RAG knowledge base backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.1.0",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "PyJWT>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "orjson>=3.10.6",
  "httpx>=0.27.0",
  "redis>=5.0.8",
  "tenacity>=8.5.0",
  "qdrant-client>=1.11.1",
  "opensearch-py>=2.6.0",
  "minio>=7.2.0",
  "PyMuPDF>=1.23.0",
  "pypdf>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
